--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <input type="hidden" value="35"/>
                 </div>
                 <div class="card">
-                    <img class="pic" src="img/naturallederjacke.JPG" alt="Lederjacke">
+                    <img class="pic" src="img/AStartsRacer.jpg" alt="Lederjacke">
                     <h4>natural lederjacke</h4>
                     <h4>445,00€</h4>
                     <a href="#" class="add-warenkorb cart1">Kaufen</a>
@@ -153,8 +153,8 @@
                     <input type="hidden" value="35"/>
                 </div>
                 <div class="card">
-                    <img class="pic" src="img/naturallederjacke.JPG" alt="Lederjacke">
-                    <h4>natural lederjacke</h4>
+                    <img class="pic" src="img/AStartsRacer.jpg" alt="Lederjacke">
+                    <h4>A-Starts Racer</h4>
                     <h4>445,00€</h4>
                     <a href="#" class="add-warenkorb cart1">Kaufen</a>
                     <a href="#" class="info-cart info">Info's</a>
